--- a/Music Project/MainStoryboard.storyboard
+++ b/Music Project/MainStoryboard.storyboard
@@ -173,7 +173,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <items>
-                                    <navigationItem title="Title" id="PK2-FI-JL2">
+                                    <navigationItem id="PK2-FI-JL2">
                                         <barButtonItem key="leftBarButtonItem" id="Xmm-3N-y8Q">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="PKa-dE-GrD">
                                                 <rect key="frame" x="16" y="5" width="71" height="33"/>
@@ -194,6 +194,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="navItem" destination="PK2-FI-JL2" id="PA9-Uj-aML"/>
                         <outlet property="txtView" destination="H8A-Ms-i2s" id="Tgr-lC-XhT"/>
                     </connections>
                 </viewController>
